fixed plugins management module to resolve broken filtering of bundle repositories and system bundles

--- a/.gitignore
+++ b/.gitignore
@@ -204,3 +204,4 @@ www/release_notes/images/Thumbs.db
 /plugins/PairedEndDataPreprocessor/target/
 .ant-targets-build.xml
 /plugins/IGBR/target/
+extbundles/*
