updated maven clean method to include extbundles directory content

--- a/pom.xml
+++ b/pom.xml
@@ -687,9 +687,17 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>${project.parent.basedir}/bundles</directory>
+                            <directory>${basedir}/bundles</directory>
                             <includes>
                                 <include>*.jar</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                          <fileset>
+                            <directory>${basedir}/extbundles</directory>
+                            <includes>
+                                <include>*.jar</include>
+                                <include>repository.xml</include>
                             </includes>
                             <followSymlinks>false</followSymlinks>
                         </fileset>
