--- a/developmentPlugins/GeometricMean/pom.xml
+++ b/developmentPlugins/GeometricMean/pom.xml
@@ -101,6 +101,7 @@
                         <Export-Package/>
                         <Bundle-Activator>com.gene.geometricmean.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Bundle-Description>operation to compute Geometric Mean on selected graph tracks</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>            
