--- a/developmentPlugins/ParentOperators/pom.xml
+++ b/developmentPlugins/ParentOperators/pom.xml
@@ -117,6 +117,7 @@
                         <Export-Package/>
                         <Bundle-Activator>com.affymetrix.genometryImpl.operator.extra.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Bundle-Description>Plugin to add operators to perform model level operations</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>            
