--- a/core/igb_service/pom.xml
+++ b/core/igb_service/pom.xml
@@ -7,8 +7,11 @@
         <version>8.2</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
+    
     <groupId>com.affymetrix</groupId>
     <artifactId>igb-service</artifactId>
+    <version>${igb-service-version}</version>
+    
     <packaging>bundle</packaging>
 
     <name>igb service</name>
