--- a/core/window_service/pom.xml
+++ b/core/window_service/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <groupId>com.affymetrix</groupId>
     <artifactId>window-service</artifactId>
+    <version>${windows-service-version}</version>
     <packaging>bundle</packaging>
 
     <name>Window Service</name>
