--- a/plugins/AnnotationTab/pom.xml
+++ b/plugins/AnnotationTab/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <groupId>com.affymetrix</groupId>
     <artifactId>annotation-tab</artifactId>
+    <version>${annotation-tab-version}</version>
     <packaging>bundle</packaging>
 
     <name>Annotation Tab</name>
