--- a/plugins/BigBedHandler/pom.xml
+++ b/plugins/BigBedHandler/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <groupId>com.affymetrix</groupId>
     <artifactId>bigBedHandler</artifactId>
+    <version>${bigBedHandler-version}</version>
     <packaging>bundle</packaging>
 
     <name>BigBedHandler</name>
