--- a/plugins/BigWigHandler/pom.xml
+++ b/plugins/BigWigHandler/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <groupId>com.affymetrix</groupId>
     <artifactId>bigWigHandler</artifactId>
+    <version>${bigWigHandler-version}</version>
     <packaging>bundle</packaging>
 
 
