--- a/plugins/Bookmark/pom.xml
+++ b/plugins/Bookmark/pom.xml
@@ -9,6 +9,7 @@
     </parent>
     <groupId>com.affymetrix</groupId>
     <artifactId>bookmark</artifactId>
+    <version>${bookmark-version}</version>
     <packaging>bundle</packaging>
 
     <name>Bookmark</name>
