--- a/plugins/RestrictionSites/pom.xml
+++ b/plugins/RestrictionSites/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>restrictionSites</artifactId>
+    <version>${restrictionSites-version}</version>
     <packaging>bundle</packaging>
 
     <name>Restriction Sites</name>
