--- a/plugins/Thresholding/pom.xml
+++ b/plugins/Thresholding/pom.xml
@@ -10,6 +10,8 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>thresholding</artifactId>
+    <version>${thresholding-version}</version>
+    
     <packaging>bundle</packaging>
 
     <name>thresholding</name>
