--- a/plugins/ApolloLibrary/pom.xml
+++ b/plugins/ApolloLibrary/pom.xml
@@ -9,7 +9,8 @@
     </parent>
     <groupId>com.affymetrix</groupId>
     <artifactId>apollo-library</artifactId>
-    <version>8.2</version>
+    <version>${apollo-library-version}</version>
+    
     <packaging>bundle</packaging>
 
     <name>Apollo Library</name>
