--- a/plugins/GraphTab/pom.xml
+++ b/plugins/GraphTab/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>graphTab</artifactId>
+    <version>${graphTab-version}</version>
     <packaging>bundle</packaging>
 
     <name>Graph Tab</name>
@@ -62,7 +63,13 @@
         </dependency>
     </dependencies>
     <build>
-        <plugins><plugin><artifactId>maven-clean-plugin</artifactId></plugin><plugin><artifactId>maven-dependency-plugin</artifactId></plugin>     
+        <plugins>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>     
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
