--- a/plugins/KeyWordSearch/pom.xml
+++ b/plugins/KeyWordSearch/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>keyWordSearch</artifactId>
+    <version>${keyWordSearch-version}</version>
     <packaging>bundle</packaging>
 
     <name>KeyWord Search</name>
