--- a/plugins/NCBIBlast/pom.xml
+++ b/plugins/NCBIBlast/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>ncbiBlast</artifactId>
+    <version>${ncbiBlast-version}</version>
     <packaging>bundle</packaging>
 
 
