--- a/plugins/PropertyView/pom.xml
+++ b/plugins/PropertyView/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>propertyView</artifactId>
+    <version>${propertyView-version}</version>
     <packaging>bundle</packaging>
 
     <name>Property View	</name>
