--- a/plugins/SearchModeIdOrProps/pom.xml
+++ b/plugins/SearchModeIdOrProps/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>searchModelIdOrProps</artifactId>
+    <version>${searchModelIdOrProps-version}</version>
     <packaging>bundle</packaging>
 
     <name>searchModelIdOrProps</name>
