--- a/plugins/SearchModeLucene/pom.xml
+++ b/plugins/SearchModeLucene/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>searchModeLucene</artifactId>
+    <version>${searchModeLucene-version}</version>
     <packaging>bundle</packaging>
 
     <name>searchModeLucene</name>
