--- a/plugins/SequenceViewer/pom.xml
+++ b/plugins/SequenceViewer/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>sequenceViewer</artifactId>
+    <version>${sequenceViewer-version}</version>
     <packaging>bundle</packaging>
 
     <name>sequenceViewer</name>
@@ -48,7 +49,13 @@
     </dependencies>
 
     <build>
-        <plugins><plugin><artifactId>maven-clean-plugin</artifactId></plugin><plugin><artifactId>maven-dependency-plugin</artifactId></plugin>      
+        <plugins>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>      
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
