--- a/plugins/Survey/pom.xml
+++ b/plugins/Survey/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>survey</artifactId>
+    <version>${survey-version}</version>
     <packaging>bundle</packaging>
 
     <name>survey</name>
