--- a/plugins/Update/pom.xml
+++ b/plugins/Update/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>update</artifactId>
+    <version>${update-version}</version>
     <packaging>bundle</packaging>
 
     <name>update</name>
