--- a/plugins/window_service_def/pom.xml
+++ b/plugins/window_service_def/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>windowsServiceDef</artifactId>
+    <version>${windowsServiceDef-version}</version>
     <packaging>bundle</packaging>
 
     <name>windowsServiceDef</name>
@@ -33,31 +34,33 @@
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>affymetrix-common</artifactId>
-            <version>8.2</version>
-            <type>jar</type>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>window-service</artifactId>
-            <version>8.2</version>
-            <type>jar</type>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igbSwingExt</artifactId>
-            <version>8.2</version>
-            <type>jar</type>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>genometryImpl</artifactId>
-            <version>8.2</version>
-            <type>jar</type>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 
     <build>
-        <plugins><plugin><artifactId>maven-clean-plugin</artifactId></plugin><plugin><artifactId>maven-dependency-plugin</artifactId></plugin>    
+        <plugins>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>    
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
