--- a/pom.xml
+++ b/pom.xml
@@ -9,14 +9,21 @@
     <name>IGB Project</name>
 
     <properties>
+        <!-- Explicitly declaring the source encoding eliminates the following 
+        message: -->
+        <!-- [WARNING] Using platform encoding (UTF-8 actually) to copy filtered 
+        resources, i.e. build is platform dependent! -->
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- force java 1.6 compatibility -->
         <maven.compiler.source>1.6</maven.compiler.source>
         <maven.compiler.target>1.6</maven.compiler.target>
-        <igbVersion>${project.version}</igbVersion>
+        <!-- As a best pratice, all versions will be controlled via properties -->
+        
+        <!-- Start of external bundle version declarations -->        
         <log4jVersion>2.0-rc1</log4jVersion>
         <guavaVersion>16.0.1</guavaVersion>
         <commonsLangVersion>3.1</commonsLangVersion>
-        <commonsCsvVersion>1.0.-2014-07-16</commonsCsvVersion>
+        <commonsCsvVersion>1.0</commonsCsvVersion>
         <commonsIoVersion>2.4</commonsIoVersion>
         <genovizVersion>1.0.7</genovizVersion>
         <felixMainVersion>4.2.2</felixMainVersion>
@@ -30,6 +37,44 @@
         <samVersion>1.110</samVersion>
         <commonsVfsVersion>2.0</commonsVfsVersion>
         <jide.version>3.5.15</jide.version>
+        <!-- End of external bundle version declarations -->
+        
+        <!-- Start of included stable bundle version declarations -->           
+        <heatmap-editor-version>2.0.0</heatmap-editor-version>
+        <affymetrix-common-version>2.0.0</affymetrix-common-version>
+        <genomitryImpl-version>2.0.0</genomitryImpl-version>
+        <igb-version>2.0.0</igb-version>
+        <igbSwingExt-version>2.0.0</igbSwingExt-version>
+        <igb-service-version>2.0.0</igb-service-version>
+        <windows-service-version>2.0.0</windows-service-version>
+        <sharedLibWrapper-version>2.0.0</sharedLibWrapper-version>
+        <apollo-library-version>2.0.0</apollo-library-version>
+        <annotation-tab-version>2.0.0</annotation-tab-version>
+        <bigBedHandler-version>2.0.0</bigBedHandler-version>
+        <bigWigHandler-version>2.0.0</bigWigHandler-version>
+        <bookmark-version>2.0.0</bookmark-version>
+        <externalView-version>2.0.0</externalView-version>
+        <graphTab-version>2.0.0</graphTab-version>
+        <igbScript-version>2.0.0</igbScript-version>
+        <keyWordSearch-version>2.0.0</keyWordSearch-version>
+        <ncbiBlast-version>2.0.0</ncbiBlast-version>       
+        <propertyView-version>2.0.0</propertyView-version>
+        <restrictionSites-version>2.0.0</restrictionSites-version>
+        <searchModelIdOrProps-version>2.0.0</searchModelIdOrProps-version>
+        <searchModeLucene-version>2.0.0</searchModeLucene-version>
+        <searchView-version>2.0.0</searchView-version>
+        <sequenceViewer-version>2.0.0</sequenceViewer-version>
+        <survey-version>2.0.0</survey-version>
+        <thresholding-version>2.0.0</thresholding-version>
+        <tutorial-version>2.0.0</tutorial-version>
+        <update-version>2.0.0</update-version>
+        <pluginsPage-version>2.0.0</pluginsPage-version>
+        <windowsServiceDef-version>2.0.0</windowsServiceDef-version>
+        <paired-data-preprocessor-version>2.0.0</paired-data-preprocessor-version>
+        <igbr-version>2.0.0</igbr-version>        
+        <main-version>2.0.0</main-version>
+        <!-- End of included stable bundle version declarations -->
+         <ncbiPrimer-version>2.0.0</ncbiPrimer-version>
     </properties>
 
     <repositories>
@@ -187,43 +232,43 @@
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>heatmap-editor</artifactId>
-                <version>${igbVersion}</version>
+                <version>${heatmap-editor-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>affymetrix-common</artifactId>
-                <version>${igbVersion}</version>
+                <version>${affymetrix-common-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>genometryImpl</artifactId>
-                <version>${igbVersion}</version>
+                <version>${genomitryImpl-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igb</artifactId>
-                <version>${igbVersion}</version>
+                <version>${igb-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igb-service</artifactId>
-                <version>${igbVersion}</version>
+                <version>${igb-service-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igbSwingExt</artifactId>
-                <version>${igbVersion}</version>
+                <version>${igbSwingExt-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>window-service</artifactId>
-                <version>${igbVersion}</version>
+                <version>${windows-service-version}</version>
                 <scope>provided</scope>
             </dependency>
             <!--End of core module dependencies-->
@@ -232,157 +277,157 @@
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>apollo-library</artifactId>
-                <version>${igbVersion}</version>
+                <version>${apollo-library-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>annotation-tab</artifactId>
-                <version>${igbVersion}</version>
+                <version>${annotation-tab-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>bigBedHandler</artifactId>
-                <version>${igbVersion}</version>
+                <version>${bigBedHandler-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>bigWigHandler</artifactId>
-                <version>${igbVersion}</version>
+                <version>${bigWigHandler-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>bookmark</artifactId>
-                <version>${igbVersion}</version>
+                <version>${bookmark-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>externalView</artifactId>
-                <version>${igbVersion}</version>
+                <version>${externalView-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>graphTab</artifactId>
-                <version>${igbVersion}</version>
+                <version>${graphTab-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>igbScript</artifactId>
-                <version>${igbVersion}</version>
+                <version>${igbScript-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>keyWordSearch</artifactId>
-                <version>${igbVersion}</version>
+                <version>${keyWordSearch-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>ncbiBlast</artifactId>
-                <version>${igbVersion}</version>
+                <version>${ncbiBlast-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>ncbiPrimer</artifactId>
-                <version>${igbVersion}</version>
+                <version>${ncbiPrimer-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>propertyView</artifactId>
-                <version>${igbVersion}</version>
+                <version>${propertyView-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>restrictionSites</artifactId>
-                <version>${igbVersion}</version>
+                <version>${restrictionSites-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchModelIdOrProps</artifactId>
-                <version>${igbVersion}</version>
+                <version>${searchModelIdOrProps-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchModeLucene</artifactId>
-                <version>${igbVersion}</version>
+                <version>${searchModeLucene-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>searchView</artifactId>
-                <version>${igbVersion}</version>
+                <version>${searchView-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>sequenceViewer</artifactId>
-                <version>${igbVersion}</version>
+                <version>${sequenceViewer-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>survey</artifactId>
-                <version>${igbVersion}</version>
+                <version>${survey-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>thresholding</artifactId>
-                <version>${igbVersion}</version>
+                <version>${thresholding-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>tutorial</artifactId>
-                <version>${igbVersion}</version>
+                <version>${tutorial-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>update</artifactId>
-                <version>${igbVersion}</version>
+                <version>${update-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>pluginsPage</artifactId>
-                <version>${igbVersion}</version>
+                <version>${pluginsPage-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>windowsServiceDef</artifactId>
-                <version>${igbVersion}</version>
+                <version>${windowsServiceDef-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.affymetrix</groupId>
                 <artifactId>sharedLibWrapper</artifactId>
-                <version>${igbVersion}</version>
+                <version>${sharedLibWrapper-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>paired-data-preprocessor</artifactId>
-                <version>${igbVersion}</version>
+                <version>${paired-data-preprocessor-version}</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>igbr</artifactId>
-                <version>${igbVersion}</version>
+                <version>${igbr-version}</version>
                 <scope>provided</scope>
             </dependency>
 
@@ -694,7 +739,7 @@
                             </includes>
                             <followSymlinks>false</followSymlinks>
                         </fileset>
-                          <fileset>
+                        <fileset>
                             <directory>${basedir}/extbundles</directory>
                             <includes>
                                 <include>*.jar</include>
