--- a/developmentPlugins/NCBIPrimer/pom.xml
+++ b/developmentPlugins/NCBIPrimer/pom.xml
@@ -10,7 +10,9 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>ncbiPrimer</artifactId>
-    <packaging>bundle</packaging>
+    <version>${ncbiPrimer-version}</version>
+    
+    <packaging>jar</packaging>
 
     <name>NCBI Primer</name>
     
