--- a/developmentPlugins/TallyHandler/pom.xml
+++ b/developmentPlugins/TallyHandler/pom.xml
@@ -10,6 +10,8 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>talleyHandler</artifactId>
+    <version>${talleyHandler-version}</version>
+    
     <packaging>jar</packaging>
 
     <name>talleyHandler</name>
