--- a/plugins/plugins_page/src/main/resources/bundles.properties
+++ b/plugins/plugins_page/src/main/resources/bundles.properties
@@ -1,44 +1,44 @@
-com.affymetrix.igbSwingExt;8.2.0
+com.affymetrix.igbSwingExt;2.0.0
 BigWig;1.0.0
-com.affymetrix.igb.PropertyView;8.2.0
-com.lorainelab.paired-data-preprocessor;8.2.0
-com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel;8.2.0
-com.affymetrix.igb.Bookmark;8.2.0
-com.affymetrix.igb.ExternalView;8.2.0
+com.affymetrix.igb.PropertyView;2.0.0
+com.lorainelab.paired-data-preprocessor;2.0.0
+com.affymetrix.igb.tabs.annotation.AnnotationTrackPanel;2.0.0
+com.affymetrix.igb.Bookmark;2.0.0
+com.affymetrix.igb.ExternalView;2.0.0
 org.apache.logging.log4j-api;2.0.0.rc1
-com.affymetrix.genometryImpl;8.2.0
-com.affymetrix.sequenceViewer;8.2.0
+com.affymetrix.genometryImpl;2.0.0
+com.affymetrix.sequenceViewer;2.0.0
 com.affymetrix.genoviz;1.0.7
-com.affymetrix.searchModelIdOrProps;8.2.0
-com.affymetrix.heatmap-editor;8.2.0
-com.affymetrix.thresholding;8.2.0
-com.affymetrix.igb.IGB;8.2.0
+com.affymetrix.searchModelIdOrProps;2.0.0
+com.affymetrix.heatmap-editor;2.0.0
+com.affymetrix.thresholding;2.0.0
+com.affymetrix.igb.IGB;2.0.0
 org.apache.commons.pool;1.6.0
-com.gene.bigwighandler.BigWigHandler;8.2.0
-org.apache.commons.csv;1.0.0.SNAPSHOT
-com.affymetrix.igbScript;8.2.0
-com.affymetrix.ncbiBlast;8.2.0
+com.gene.bigwighandler.BigWigHandler;2.0.0
+org.apache.commons.csv;1.0.0
+com.affymetrix.igbScript;2.0.0
+com.affymetrix.ncbiBlast;2.0.0
 com.jidesoft.ultimate;3.5.15
-com.affymetrix.windowsServiceDef;8.2.0
-com.affymetrix.igb.tabs.graph.GraphTab;8.2.0
+com.affymetrix.windowsServiceDef;2.0.0
+com.affymetrix.igb.tabs.graph.GraphTab;2.0.0
 org.apache.commons.codec;1.6.0
-com.affymetrix.igb.ApolloLibrary;8.2.0
-com.affymetrix.update;8.2.0
-com.affymetrix.window-service;8.2.0
+com.affymetrix.igb.ApolloLibrary;2.0.0
+com.affymetrix.update;2.0.0
+com.affymetrix.window-service;2.0.0
 com.google.guava;16.0.1
-com.affymetrix.igb.PluginsPage;8.2.0
-com.affymetrix.igb.RestrictionSites;8.2.0
-com.affymetrix.igb.SearchView;8.2.0
-com.affymetrix.igb-service;8.2.0
+com.affymetrix.igb.PluginsPage;2.0.0
+com.affymetrix.igb.RestrictionSites;2.0.0
+com.affymetrix.igb.SearchView;2.0.0
+com.affymetrix.igb-service;2.0.0
 org.apache.commons.compress;1.2.0
-com.affymetrix.searchModeLucene;8.2.0
-com.affymetrix.sharedLibWrapper;8.2.0
+com.affymetrix.searchModeLucene;2.0.0
+com.affymetrix.sharedLibWrapper;2.0.0
 org.apache.commons.lang3;3.1.0
-com.affymetrix.common;8.2.0
+com.affymetrix.common;2.0.0
 org.apache.commons.io;2.4.0
-com.affymetrix.survey;8.2.0
-com.lorainelab.igbr;8.2.0
-com.gene.bigbedhandler.BigBedHandler;8.2.0
-com.affymetrix.tutorial;8.2.0
-com.affymetrix.keyWordSearch;8.2.0
-com.affymetrix.igbSwingExt;8.2.0
+com.affymetrix.survey;2.0.0
+com.lorainelab.igbr;2.0.0
+com.gene.bigbedhandler.BigBedHandler;2.0.0
+com.affymetrix.tutorial;2.0.0
+com.affymetrix.keyWordSearch;2.0.0
+com.affymetrix.igbSwingExt;2.0.0
