--- a/developmentPlugins/SampleSelection/pom.xml
+++ b/developmentPlugins/SampleSelection/pom.xml
@@ -10,6 +10,8 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>sampleSelection</artifactId>
+    <version>${sampleSelection-version}</version>
+    
     <packaging>jar</packaging>
 
     <name>sampleSelection</name>
