--- a/developmentPlugins/SearchModeSymmetryFilter/pom.xml
+++ b/developmentPlugins/SearchModeSymmetryFilter/pom.xml
@@ -10,6 +10,8 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>searchModeSymetryFilter</artifactId>
+    <version>${searchModeSymetryFilter-version}</version>
+    
     <packaging>jar</packaging>
 
     <name>searchModeSymetryFilter</name>
