--- a/developmentPlugins/TableView/pom.xml
+++ b/developmentPlugins/TableView/pom.xml
@@ -10,6 +10,8 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>tableView</artifactId>
+    <version>${tableView-version}</version>
+    
     <packaging>jar</packaging>
 
     <name>tableView</name>
