--- a/developmentPlugins/ThousandGenomesServerType/pom.xml
+++ b/developmentPlugins/ThousandGenomesServerType/pom.xml
@@ -10,6 +10,8 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>thousandGenomesServerType</artifactId>
+    <version>${thousandGenomesServerType-version}</version>
+    
     <packaging>jar</packaging>
 
     <name>thousandGenomesServerType</name>
