--- a/plugins/SearchView/pom.xml
+++ b/plugins/SearchView/pom.xml
@@ -10,6 +10,7 @@
 
     <groupId>com.affymetrix</groupId>
     <artifactId>searchView</artifactId>
+    <version>${searchView-version}</version>
     <packaging>bundle</packaging>
 
 
